# passcave

./: .gitignore  README.md
cpack/: DESCRIPTION  Info.plist.in  PKGBUILD.in  README  WELCOME  passcave-gui.desktop.in
cpack/mime/: passcave.xml.in
data/: icon.icns  icon.psd  icon2.psd
src/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
src/cli/: CMakeLists.txt  passcave-cli.cpp
src/gui/: CMakeLists.txt  passcave-gui.cpp  passcave-gui.h  passcave-gui.qrc  passcave-gui.ui
src/gui/forms/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addnewnodedialog.cpp  addnewnodedialog.h  clickableqlabel.cpp  clickableqlabel.h  loadingdialog.cpp  loadingdialog.h  loadingdialog.ui  longtextdialog.cpp  longtextdialog.h  longtextdialog.ui  passworddialog.cpp  passworddialog.h  passworddialog.ui  preferencesdialog.cpp  preferencesdialog.h  propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui
src/gui/includes/: datamodel.cpp  datamodel.h  preferences.cpp  preferences.h  runguard.cpp  runguard.h
src/gui/translations/: english.ts  french.ts  lang.qrc
src/includes/: config.h.in  document.cpp  document.h  exceptions.h  gcry.cpp  gcry.h  utils.cpp  utils.h  utils2fa.cpp  utils2fa.h
src/tests/: CMakeLists.txt  document.cpp  document.h
